--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "laravel-vite-plugin": "^1.0",
         "sass": "^1.77.4",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "swiper": "^11.1.4"
     }
 }
